# baserow-aksioma-payment-bot

./: .env.example  .gitignore  LICENSE  README.md  aksioma-payments-bot.xml  main.py  pyproject.toml
bot/: baserow_client.py  cache_manager.py  config.py  handlers.py  main.py  states.py
